package davidbg.smartcart.datamodels;

public enum Role 
{
    REGISTERED_USER, // סל חכם, הוספה ידנית, היסטוריה
    ADMIN            // ניהול מוצרים ודוחות
}